--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "emily-portfolio",
+  "name": "great-shark-quiz",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -8,8 +8,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "core-js": "^3.8.3",
-    "vue": "^3.2.13"
+    "core-js": "^3.24.0",
+    "vue": "^3.2.37"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
